--- a/slimhamdi.net/moscow/demos/css/styleswitcher.css
+++ b/slimhamdi.net/moscow/demos/css/styleswitcher.css
@@ -10,8 +10,8 @@
 	margin-left: 0;
 	border-radius: 0 5px 5px 0;
 	font-family: 'Open Sans', Arial, sans-serif;
-	-webkit-box-shadow: 0px 0px 4px 0px rgba(51, 51, 51, 0.2);
-	box-shadow: 0px 0px 4px 0px rgba(51, 51, 51, 0.2);
+	-webkit-box-shadow: 0px 0px 4px 0px rgba(54, 54, 54, 0.2);
+	box-shadow: 0px 0px 4px 0px rgba(66, 65, 65, 0.2);
 
 }
 
@@ -20,7 +20,7 @@
 	padding-left:20px;
 	font-weight:normal;
 	cursor:pointer;
-	color:#333;
+	color:rgb(235, 22, 22);
 	position: relative;
 }
 #switcher hr {
